css/style.css
html,
body {
    height: 100%;
    padding-top: 0;
    padding-bottom: 0;
    min-width: 700px;
    overflow: hidden;
    background: #f8f9fa;
}

.overlay {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 9999;
}

.spinner-border {
    width: 5rem; 
    height: 5rem;
    border-width: .8rem;
    color: #520000;
}

@font-face {
    font-family: 'Material Symbols Outlined';
    font-display: block;
    src: local('Material Sumbols Outlined'),
        local('material-symbols-outlined'),
        url(../fonts/material-symbols-outlined.woff2) format('woff2')
}


.material-symbols-outlined {
    font-family: 'Material Symbols Outlined';
  font-variation-settings:  'FILL' 1,
  'wght' 500,
  'GRAD' 0,
  'opsz' 24;
  font-display: block;
  font-size: x-large;
  display: inline-block;
  line-height: 1;
  white-space: nowrap;
  vertical-align: top;
  padding-bottom: 0;
}

.leaflet-marker-icon-default {
    filter: hue-rotate(150deg)
}

.navbar {
    z-index: 5;
}

#spectrogram {
    position: absolute;
    width: 100%;
}

.spec-labels {
    width: 55px !important;
}

.icon {
    max-height: 30px;
    max-width: 30px;
    filter: invert(45%);

}

#list-icon:hover>img {
    filter: invert(100%);
}

span[id^="filename_"] {
    border-bottom: 1px;
    border-bottom: #818182;
    left: 25px;
    z-index: 2;
}


.filename {
    margin-left: auto;
    margin-right: auto;
}

.pointer {
    cursor: pointer;
}

#controlsWrapper .row,
#transport-controls {
    min-width: 850px;
    white-space: nowrap;
    height: 40px;
    z-index: 9;
}


div#contentWrapper {
    background: #dbe2ed url(../img/Redwing-flight.png);
    background-size: cover;
    position: absolute;
    top: 56px;
    width: 100%;
    opacity: 0;
    transition: opacity 2.5s ease;
}

div#contentWrapper.loaded {
    opacity: 1;
    /* Change background opacity to 1 when the body has the "loaded" class */
}

.zoom {
    font-size: xx-large;
}

.species-selector {
    position: relative;
}

select {
    margin-bottom: 0.2em;
    /* Add some space below the input */
    max-width: 25em
}

.dropdown-menu {
    min-width: 320px;
}

.shortcut {
    color: #666;
    font-size: 14px;
    vertical-align: -webkit-baseline-middle;
}

ul {
    /* Remove default list styling */
    list-style-type: none;
    padding: 0;
    margin: 0;

}


.bird-list {
    overflow: auto;
    margin-right: 0;
    max-height: 250px;
    max-width: 320px;
}


.bird-list li a {
    border: 1px solid #ddd;
    /* Add a border to all links */
    margin-top: -1px;
    /* Prevent double borders */
    background-color: #f6f6f6;
    /* Grey background color */
    padding: 10px;
    /* Add some padding */
    text-decoration: none;
    /* Remove default text underline */
    font-size: 14px;
    /* Increase the font-size */
    color: black;
    /* Add a black text color */
    display: block;
    /* Make it into a block element to fill the whole list */
}

.bird-list li a:hover:not(.header) {
    background-color: #eee;
    /* Add a hover effect to all links, except for headers */
}

/* make dropdown stick to row */
.table-active {
    overflow: visible;
    position: relative;
    font-weight: bolder;
}

/*
tbody tr:not(.table-active):hover {
    background-color: whitesmoke; 
}
*/

#results>thead,
#results>th,
#resultSummary>thead,
#resultSummary>th {
    position: sticky;
    top: 0;
    color: white;
    background-color: #1b1e21;
    z-index: 2;
}


#resultTableBody {
    scroll-margin-top: 120px;
}

region.wavesurfer-region:before {
    content: attr(data-region-label);
    position: absolute;
    color: beige;
    top: 10px;
    padding-left: 5px;
}

region.wavesurfer-region[data-region-highlight] {
    border: 1px solid rgb(86, 180, 239);
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05) inset, 2px 0 8px rgba(266, 255, 236, 0.6);
}

.nighttime {
    background-color: rgba(0, 0, 72, 0.2);
}

.daytime {
    background-color: rgba(86, 180, 239, 0.2);
}


.table {
    margin-bottom: 0;
}

/* Disable blue selection highlight in drag */
:not(input):not(textarea),
:not(input):not(textarea)::after,
:not(input):not(textarea)::before {
    user-select: none;
    /*cursor: default; */
}


.chart-outer {
    height: 520px;
    margin: 0 1em 1em;
    width: 100%;
    display: flex;
}

#chart-week {
    height: 520px;
    width: 100%;
    display: flex;
    order: 1;
    margin: 30px 1em 1em;
}



/* Scrollbar */

/* width */
::-webkit-scrollbar {
    width: 0.75em;
    height: 0.5em;
}

/* Track */
::-webkit-scrollbar-track {
    border-radius: 0.25em;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: slategray;
    border-radius: 0.25em;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: orangered;
}

footer {
    position: fixed;
    bottom: 0;
    height: 30px;
    text-align: center;
    width: 100%;
    z-index: 1000;
}

#fullscreen {
    max-width: 70px;
}

#speciesModal {
    max-height: 90%;
}

/* Flip comment icons */

.flipped {
    transform: scaleY(-1);
}

#dropdownMenuButton {
    max-width: 350px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.filename,
.dropdown-menu-dark>a {
    max-width: 300px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    padding-right: 5px;
    align-self: center;
}


/* ============ desktop view ============ */
@media all and (min-width: 768px) {
    .dropdown-menu li {
        position: relative;
    }

    ul ul>li:hover {
        background-color: #f1f1f1
    }

    .dropdown-menu>li:hover>.submenu {
        display: block;
    }

    #primary_nav_wrap ul ul {
        visibility: hidden;
        position: absolute;
        top: 95%;
        left: 0;
        background: #fff;
        border-radius: 5px;
        box-shadow: 2px 6px 6px rgba(0, 0, 0, 0.4);

    }

    #primary_nav_wrap:not(:hover) ul {
        transition: all 0.4s;
        transition-delay: 1s;
    }

    #primary_nav_wrap ul ul ul {
        top: 5px;
        left: 100%
    }

    #primary_nav_wrap ul li:hover>ul {
        visibility: visible;
        transition-delay: 0s;
    }

}


/* ============ desktop view .end// ============ */

/* ============ small devices ============ */
@media (max-width: 767px) {
    .dropdown-menu:not(.dropdown-menu .dropdown-menu) {
        max-height: 300px;
        overflow: auto;
    }

    .dropdown-menu>li>.submenu {
        display: block;
    }

    .dropdown-menu .dropdown-menu {
        margin-left: 0.7rem;
        margin-right: 0.7rem;
        margin-bottom: .5rem;
    }
}

/* ============ small devices .end// ============ */

.pagination a {
    background-color: #999;
    color: white;
    box-shadow: 5px 6px 6px rgba(0, 0, 0, 0.4);
}

.pagination span {
    background-color: #999;
    color: white;
    box-shadow: 5px 8px 6px rgba(0, 0, 0, 0.4);
}

.pagination a:hover:not(.active) {
    background-color: #ddd;
    color: #333;
    box-shadow: 2px 8px 10px rgba(0, 0, 0, 0.4);
}

.pagination li.disabled span {
    background: #bbb;
    color: #666;
    box-shadow: none;
}

.pagination li.active span {
    background: #777;
    color: #000;
    border: none
}


/* Style the results panel*/


#results:hover {
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
}

/* Confidence bar display */

.confidence-row {
    display: flex;
    align-items: stretch;
    border: 1px solid black;
    border-radius: 5px;
    background: lightgrey;
}

.row .bar {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-size: small;
    color: white;
}

/*
Modal customisations
 */
/* Move header */
.modal-header:active {
    cursor: move;
}

#detectionsModalBody {
    background: #dbe2ed url(../img/Redwing-flight.png);
    min-height: 220px;
    max-height: 550px;
}

/* Remove darken effect */
.modal-backdrop {
    opacity: 0.1 !important;
}

.modal-content {
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
}

input[type="range"] {
    width: 140px;
    margin: 3px;
}

input[type="range"].vertical {
    position: absolute;
    z-index: 10;
    height: 150px;
    width: 18px;
    margin: 3px;
    appearance: auto;
    -webkit-appearance: slider-vertical;
    top: -160px;
    right: 15px;
}

.form-range.vertical::-webkit-slider-runnable-track {
    width: 100%;
    height: 0.5rem;
    color: transparent;
    cursor: pointer;
    background-color: #111;
    border-color: #999;
    border-radius: 1rem;
}

/* Animate Ellipsis */

.loading:after {
    overflow: hidden;
    display: inline-block;
    vertical-align: bottom;
    -webkit-animation: ellipsis steps(4, end) 1500ms infinite;
    animation: ellipsis steps(4, end) 1500ms infinite;
    content: "\2026";
    /* ascii code for the ellipsis character */
    width: 0px;
}

@keyframes ellipsis {
    to {
        width: 15px;
    }
}

@-webkit-keyframes ellipsis {
    to {
        width: 15px;
    }
}

.circle {
    width: 20px;
    height: 20px;
    border-radius: 50%;
    font-size: medium;
    background-color: gray;
    color: white;
    text-align: center;
    line-height: 20px;
    float: right;
    text-decoration: none; /* Remove underline from <a> tags */
    transition: transform 0.2s; /* Add transition for smooth scaling */
}

.circle a {
    text-decoration: none; /* Remove underline */
    color: inherit; /* Inherit parent's color */
    display: block;
}

.circle:hover {
    transform: scale(1.1); /* Grow on mouseover */
    color: white;
}

.circle:active {
    transform: scale(0.9); /* Shrink on click */
}


#settingsForm {
    height: 75vh;
    width: 65vw;
    max-height: 925px;
    overflow-y: auto;
    overflow-x: hidden;
}

#settingsMap {
    height: 300px;
}

#context-menu {
    /* One more than modal */
    z-index: 1056;
}

#tourModal {
    /* One more than modal */
    z-index: 1057;
}

#chartRange,
#exploreRange {
    min-height: 58px;
    width: 100%;
    max-width: 400px;
}


/* Tour highlighting */

.highlighted {
    box-shadow: 0 0 10px 5px #ff6;
}

.carousel {
    overflow: hidden;
    padding-bottom: rem;
}

.carousel-caption {
    top: 100%;
}

.carousel-inner {
    overflow: visible;
}

.carousel-control-next,
.carousel-control-prev {
    top: 8rem;
}

#update-progress-bar {
    width: 100%;
    height: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    overflow: hidden;
    background-color: #f1f1f1; /* Set the background color for the entire progress bar */
  }

  /* Style the filled-in part for WebKit browsers (Chrome, Safari) */
  #update-progress-bar::-webkit-progress-value {
    background-color: #4CAF50; /* Set the color for WebKit browsers */
  }

